--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -1,11 +1,11 @@
 <ion-tabs>
-  <ion-tab label="Home" icon="home" href="/tabs/(home:home)">
-    <ion-router-outlet name="home"></ion-router-outlet>
+  <ion-tab label="Current Weather" icon="cloud" href="/tabs/(current-weather:current-weather)">
+    <ion-router-outlet name="current-weather"></ion-router-outlet>
   </ion-tab>
-  <ion-tab label="About" icon="information-circle" href="/tabs/(about:about)">
-    <ion-router-outlet name="about"></ion-router-outlet>
+  <ion-tab label="Forecast" icon="calendar" href="/tabs/(forecast:forecast)">
+    <ion-router-outlet name="forecast"></ion-router-outlet>
   </ion-tab>
-  <ion-tab label="Contact" icon="contacts" href="/tabs/(contact:contact)">
-    <ion-router-outlet name="contact"></ion-router-outlet>
+  <ion-tab label="UV Index" icon="sunny" href="/tabs/(uv-index:uv-index)">
+    <ion-router-outlet name="uv-index"></ion-router-outlet>
   </ion-tab>
 </ion-tabs>
