--- a/src/app/current-weather/current-weather.page.html
+++ b/src/app/current-weather/current-weather.page.html
@@ -1,10 +1,19 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-title>Home</ion-title>
-  </ion-toolbar>
-</ion-header>
+    <ion-toolbar color="primary">
+      <ion-title>Current Weather</ion-title>
 
-<ion-content padding>
-  The world is your oyster.
-  <p>If you get lost, the <a target="_blank" rel="noopener" href="https://ionicframework.com/docs">docs</a> will be your guide.</p>
-</ion-content>
+      <ion-buttons slot="primary">
+        <ion-button icon-only (click)="openUserPreferences()">
+          <ion-icon name="settings"></ion-icon>
+        </ion-button>
+      </ion-buttons>
+    </ion-toolbar>
+  </ion-header>
+
+  <ion-content text-center padding>
+    <div class="information">
+      <ion-label class="city">{{cityName}}</ion-label>
+      <kws-temperature class="primary-value" [scale]="scale" temperature="{{currentWeather?.temperature}}"></kws-temperature>
+    </div>
+    <kws-condition [condition]="currentWeather?.condition" [iconPaths]="iconMap"></kws-condition>
+  </ion-content>
