--- a/src/app/current-weather/current-weather.page.html
+++ b/src/app/current-weather/current-weather.page.html
@@ -3,7 +3,7 @@
       <ion-title>Current Weather</ion-title>
 
       <ion-buttons slot="primary">
-        <ion-button icon-only (click)="openUserPreferences()">
+        <ion-button it con-only (click)="openUserPreferences()">
           <ion-icon name="settings"></ion-icon>
         </ion-button>
       </ion-buttons>
