--- a/src/app/forecast/forecast.page.html
+++ b/src/app/forecast/forecast.page.html
@@ -1,7 +1,23 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-title>About</ion-title>
+  <ion-toolbar color="primary">
+    <ion-title>
+      Forecast
+    </ion-title>
+
+    <ion-buttons slot="primary">
+      <ion-button icon-only (click)="openUserPreferences()">
+        <ion-icon name="settings"></ion-icon>
+      </ion-button>
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
-<ion-content></ion-content>
+<ion-content padding>
+  <ion-list>
+    <ion-item *ngFor="let f of forecast">
+      <ion-label>
+        <kws-daily-forecast [scale]="scale" [forecasts]="f" [iconPaths]="iconMap"></kws-daily-forecast>
+      </ion-label>
+    </ion-item>
+  </ion-list>
+</ion-content>
