--- a/src/app/uv-index/uv-index.page.html
+++ b/src/app/uv-index/uv-index.page.html
@@ -1,17 +1,20 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-title>
-      Contact
-    </ion-title>
-  </ion-toolbar>
-</ion-header>
+    <ion-toolbar color="primary">
+      <ion-title>
+        UV Index
+      </ion-title>
 
-<ion-content>
-  <ion-list>
-    <ion-list-header>Follow us on Twitter</ion-list-header>
-    <ion-item>
-      <ion-icon name="logo-ionic" slot="start"></ion-icon>
-      @ionicframework
-    </ion-item>
-  </ion-list>
-</ion-content>
+      <ion-buttons slot="primary" >
+        <ion-button  icon-only (click)="openUserPreferences()">
+          <ion-icon name="settings"></ion-icon>
+        </ion-button>
+      </ion-buttons>
+    </ion-toolbar>
+  </ion-header>
+
+  <ion-content text-center padding>
+    <kws-uv-index class="primary-value" [uvIndex]="uvIndex?.value"></kws-uv-index>
+    <div class="description">
+      {{advice[uvIndex?.riskLevel]}}
+    </div>
+  </ion-content>
