--- a/src/app/user-preferences/user-preferences.component.html
+++ b/src/app/user-preferences/user-preferences.component.html
@@ -27,5 +27,8 @@
 </ion-content>
 
 <ion-footer>
-  <ion-button  expand="block" color="secondary" (click)="save()">Save</ion-button>
+  <ion-toolbar>
+
+    <ion-button  expand="block" color="secondary" (click)="save()">Save</ion-button>
+  </ion-toolbar>
 </ion-footer>
