Fully functioning version 4

--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -3,8 +3,9 @@
 
 /** Ionic CSS Variables **/
 :root {
+  --ion-background-color: #b9dbf7;
   /** primary **/
-  --ion-color-primary: #488aff;
+  --ion-color-primary: #085A9E;
   --ion-color-primary-rgb: 72,138,255;
   --ion-color-primary-contrast: #fff;
   --ion-color-primary-contrast-rgb: 255,255,255;
@@ -66,7 +67,7 @@
   --ion-color-medium-contrast-rgb: 0,0,0;
   --ion-color-medium-shade: #86888f;
   --ion-color-medium-tint: #a2a4ab;
-  
+
   /** dark **/
   --ion-color-dark: #222;
   --ion-color-dark-rgb: 34,34,34;
