--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -1,4 +1,4 @@
-<ion-tabs>
+<ion-tabs color="primary">
   <ion-tab label="Current Weather" icon="cloud" href="/tabs/(current-weather:current-weather)">
     <ion-router-outlet name="current-weather"></ion-router-outlet>
   </ion-tab>
